# gr-lpwan

./: .gitignore  AUTHORS  CMakeLists.txt  MANIFEST.md  README.md
apps/: Calibrate_RX_USRP.grc  SpaRSe_OTA_PER_measurement.py  SpaRSe_RX_USRP.grc  SpaRSe_Rx.grc  SpaRSe_TX_USRP.grc  SpaRSe_Tx.grc
apps/IEEE802154_LECIM/: fec_test.grc  fragmentation_loopback.grc  fragmentation_test.grc  lpwan_DSSS_PHY_BPSK.grc  lpwan_DSSS_PHY_OQPSK_playground.grc  rx.grc  tx.grc
cmake/Modules/: lpwanConfig.cmake
docs/: README.lpwan
docs/doxygen/: Doxyfile.in
examples/SpaRSe/: SpaRSe_AWGN_simulation.py  SpaRSe_RX_hier.grc  (+4 more)
grc/: SpaRSe_RX_hier.grc  lpwan_SpaRSe_synchronization_cc.xml  lpwan_conj_multiply_delay_ccc.xml  lpwan_dsss_deinterleaver_ff.xml  lpwan_dsss_despread_cc.xml  lpwan_dsss_despread_simple_cc.xml  lpwan_dsss_diff_coding_bb.xml  lpwan_dsss_diff_decoding_ff.xml  lpwan_dsss_filter_crc_packets.xml  lpwan_dsss_fragmentation.xml  lpwan_dsss_interleaver_bb.xml  lpwan_dsss_normalize_ff.xml  lpwan_dsss_preamble_demod_cc.xml  lpwan_dsss_preamble_detector_cc.xml  lpwan_dsss_preamble_search_cc.xml  lpwan_dsss_snr_estimator.xml  lpwan_dsss_spreading_bb.xml  lpwan_dsss_tx_gain_sweep.xml  lpwan_error_rate_calculation.xml  lpwan_fddsm_mod_bcb.xml  lpwan_fddsm_preamble_detector_cc.xml  lpwan_fddsm_soft_demod_bpsk_cf.xml  lpwan_interpolating_spreading_cc.xml  lpwan_message_counter.xml  lpwan_packet_demux_cc.xml  lpwan_partial_repeat_cc.xml
include/lpwan/: CMakeLists.txt  api.h  conj_multiply_delay_ccc.h  dsss_codes.h  dsss_deinterleaver_ff.h  dsss_despread_cc.h  dsss_despread_simple_cc.h  dsss_diff_coding_bb.h  dsss_diff_decoding_ff.h  dsss_filter_crc_packets.h  dsss_fragmentation.h  dsss_interleaver_bb.h  dsss_normalize_ff.h  dsss_preamble_demod_cc.h  dsss_preamble_detector_cc.h  dsss_snr_estimator.h  dsss_spreading_bb.h  fddsm_demodulator_kernel.h  fddsm_mod_bcb.h  fddsm_modulator_kernel.h  fddsm_preamble_detector_cc.h  fddsm_soft_demod_bpsk_cf.h  interpolating_spreading_cc.h  mac_crc.h  mac_field.h  mac_field_frag_header.h  mac_field_frag_status.h  mac_field_fragment.h  mac_field_frak.h  mac_field_frame.h  mac_field_frame_ctrl.h  mac_field_header_ie.h  mac_field_ie_fscd.h  mac_format.h  packet_demux_cc.h  partial_repeat_cc.h  sliding_dotprod_32f_x2_32f.h  thread_pool.h
lib/: CMakeLists.txt  conj_multiply_delay_ccc_impl.cc  conj_multiply_delay_ccc_impl.h  dsss_codes.cc  dsss_deinterleaver_ff_impl.cc  dsss_deinterleaver_ff_impl.h  dsss_despread_cc_impl.cc  dsss_despread_cc_impl.h  dsss_despread_simple_cc_impl.cc  dsss_despread_simple_cc_impl.h  dsss_diff_coding_bb_impl.cc  dsss_diff_coding_bb_impl.h  dsss_diff_decoding_ff_impl.cc  dsss_diff_decoding_ff_impl.h  dsss_filter_crc_packets_impl.cc  dsss_filter_crc_packets_impl.h  dsss_fragmentation_impl.cc  dsss_fragmentation_impl.h  dsss_interleaver_bb_impl.cc  dsss_interleaver_bb_impl.h  dsss_normalize_ff_impl.cc  dsss_normalize_ff_impl.h  dsss_preamble_demod_cc_impl.cc  dsss_preamble_demod_cc_impl.h  dsss_preamble_detector_cc_impl.cc  dsss_preamble_detector_cc_impl.h  dsss_snr_estimator_impl.cc  dsss_snr_estimator_impl.h  dsss_spreading_bb_impl.cc  dsss_spreading_bb_impl.h  fddsm_demodulator_kernel.cc  fddsm_mod_bcb_impl.cc  fddsm_mod_bcb_impl.h  fddsm_modulator_kernel.cc  fddsm_preamble_detector_cc_impl.cc  fddsm_preamble_detector_cc_impl.h  fddsm_soft_demod_bpsk_cf_impl.cc  fddsm_soft_demod_bpsk_cf_impl.h  interpolating_spreading_cc_impl.cc  interpolating_spreading_cc_impl.h  (+19 more)
python/: CMakeLists.txt  SpaRSe_synchronization_cc.py  SpaRSe_utils.py  __init__.py  dsss_const.py  dsss_demod.py  dsss_mod.py  dsss_phy.py  dsss_play.py  dsss_preamble_search_cc.py  error_rate_calculation.py  message_counter.py  qa_SpaRSe_synchronization_cc.py  qa_conj_multiply_delay_ccc.py  qa_dsss_deinterleaver_ff.py  qa_dsss_despread_cc.py  qa_dsss_despread_simple_cc.py  qa_dsss_diff_coding_bb.py  qa_dsss_diff_decoding_ff.py  qa_dsss_fragmentation.py  qa_dsss_interleaver_bb.py  qa_dsss_normalize_ff.py  qa_dsss_preamble_demod_cc.py  qa_dsss_preamble_detector_cc.py  qa_dsss_preamble_search_cc.py  qa_dsss_snr_estimator.py  qa_dsss_spreading_bb.py  qa_fddsm_mod_bcb.py  qa_fddsm_preamble_detector_cc.py  qa_fddsm_soft_demod_bpsk_cf.py  qa_interpolating_spreading_cc.py  qa_packet_demux_cc.py  qa_partial_repeat_cc.py  qa_sliding_dotprod_32f_x2_32f.py
swig/: CMakeLists.txt  lpwan_swig.i
(+48 files in other folders)
